# recreating-the-past

./: .gitignore  README.md
week-1/: README.md  homework.md
week-1/homework/: vera_molnar.31.toe  vera_molnar.toe
week-1/homework/Backup/: vera_molnar.1.toe  vera_molnar.10.toe  vera_molnar.11.toe  vera_molnar.12.toe  vera_molnar.13.toe  vera_molnar.14.toe  vera_molnar.15.toe  vera_molnar.16.toe  vera_molnar.17.toe  vera_molnar.18.toe  vera_molnar.19.toe  vera_molnar.2.toe  vera_molnar.20.toe  vera_molnar.21.toe  vera_molnar.22.toe  vera_molnar.23.toe  vera_molnar.24.toe  vera_molnar.25.toe  vera_molnar.26.toe  vera_molnar.27.toe  vera_molnar.28.toe  vera_molnar.3.toe  (+8 more)
week-10/: README.md  homework.md
week-11/: README.md  homework.md
week-12/: README.md  homework.md
week-2/: README.md  homework.md
week-2/homework/: john_whitney.10.toe  john_whitney.toe
week-3/: README.md  homework.md
week-3/homework/: muriel_cooper.toe
week-3/information-landscape/: .gitignore
week-3/references/: references.md
week-3/references/muriel-cooper-book-designs/: .gitignore  README.md  pyproject.toml
week-3/references/muriel-cooper-book-designs/data/: books.db
week-3/references/muriel-cooper-book-designs/src/: agent.py  config.py  db.py  models.py  server.py  tools.py
week-3/references/muriel-cooper-book-designs/static/: index.html
week-4/: README.md  homework.md
week-4/homework/: anni_albers.3.toe
week-5/: README.md  homework.md
week-6/: README.md  homework.md
week-7/: README.md  homework.md
week-8/: README.md  homework.md
week-9/: README.md  homework.md
(+65 files in other folders)
